--- a/src/index.css
+++ b/src/index.css
@@ -32,27 +32,40 @@ h2 {
     width: 100%;
     height: 45px;
   }
-  /* carousel */
-  .carousel-item-next,
-  .carousel-item-prev,
-  .carousel-item-active {
-    display: flex;
-  }
-  .carousel-caption {
-    position: absolute;
-    top: 0;
-  }
-
-  .carousel-caption h2 {
-    color: #fff;
-  }
-  .carousel img {
-    height: 300px;
-    padding: 30px;
-    margin: 40px;
-    margin-left: 30%;
-    border-radius: 50%;
-  }
-  .carousel a {
-    margin: 0 auto;
-  }
+   /* carousel */
+   .carousel-item-next,
+   .carousel-item-prev,
+   .carousel-item.active {
+     display: flex;
+   }
+   .carousel-caption {
+     position: absolute;
+     top: 0;
+   }
+ 
+   .carousel-caption h2 {
+     color: #fff;
+   }
+   .carousel img {
+     height: 300px;
+     padding: 30px;
+     margin: 50px;
+     /* margin-left: 30%; */
+     border-radius: 50%;
+   }
+   .carousel a {
+     margin: 0 auto;
+   }
+   @media (max-width: 767px) {
+     .carousel img {
+       height: 150px;
+       margin-top: 80px;
+       margin-left: 10%;
+     }
+   }
+   @media (max-width: 767px) {
+     .carousel-caption h2 {
+       height: 50px;
+       font-size: 15px;
+     }
+   }
